set the correct height of edit and add contact overflow in mobile mode

--- a/styles/contacts/contacts_overlays_mobile.css
+++ b/styles/contacts/contacts_overlays_mobile.css
@@ -3,8 +3,6 @@
   html, body {
     height: 100vh;
     width: 100vw;
-    margin: 0;
-    padding: 0;
   }
  
   .content {
@@ -12,8 +10,6 @@
     flex-direction: column;
     height: 100vh;
     width: 100vw;
-    margin: 0;
-    padding: 0;
   }
 
   .card {
@@ -29,6 +25,7 @@
   }
 
   .card h2 {
+    text-align: start;
     font-size: 47px;
   }
 
@@ -102,13 +99,7 @@
     height: 100vh;
     left: 0;
     top: 0;
-    margin: 0 auto;
-    border-radius: 30px;
-    background-color: rgba(255, 255, 255, 0.9);
-    box-sizing: border-box;
-    overflow-y: auto;
-    padding: 20px;
-  }
+   }
 
   .close-btn svg {
     position: absolute;
@@ -152,7 +143,25 @@
   }
 
   .overlay-iframe {
-    width: 95vh !important;
-    height: 95vh !important;
+    height: 95% !important;
+    width: 95% !important;
+    display: block;
+    margin: auto;
+    border-radius: 30px;
+    border: none;
+    box-sizing: border-box;
   }
+  
 }
+
+.overlay-iframe {
+  width: 95%;
+  height: 95%;
+  border: none;
+  border-radius: 30px;
+  display: block;
+  margin: auto;
+  box-sizing: border-box;
+}
+
+
